# CoastSeg-Planet

./: .gitignore  2023-02-14-10-33-43_L8_ID_mqq51_unit16.tif  2023-02-14-10-33-43_L8_ID_mqq51_unit16_new_block.tif  ID_mqq51_sample_int3_new_block.tif  MANIFEST.in  README.md  cancel_orders.py  clip_and_convert_toar.py  config.ini  convert_landsat_to_unit16.py  coregister-planet_gw.ipynb  coregister_landsat_gw.ipynb  coregister_landsat_imagery.py  coregister_planet_landsat.ipynb  coregister_planet_landsat_gw.ipynb  coregistered_landsat_2023-02-14-10-33-43_L8_ID_mqq51_unit16.tif  download_script.py  download_script_filter_by_month.py  download_script_parallel_downloads.py  download_script_parallel_downloads_with_coregister.py  download_toa_enabled.py  extract_shorelines_for_order.py  official_planet_prototype_v1_final_version.ipynb  official_planet_prototype_v1_final_version_topobathy.ipynb  official_planet_prototype_v2.ipynb  official_planet_prototype_v3.ipynb  planet_prototype_script.py  prototype.ipynb  pyproject.toml  read_UDM_mask.ipynb  read_topobathy.py  render_topobathy_on_map.ipynb.ipynb  requirements_dev.txt  retile_landsat_then_coreg.ipynb  update_blocksize_landsat_then_coreg.ipynb
1_scripts/2_plotting/: create_movie.py
1_scripts/3_coregister/: convert_landsat_to_unit16.py  full_coregister_workflow_and_generate_movies.py
1_scripts/6_shoreline_intersections/: intersect_shorelines_with_transects_to_make_transect_timeseries.py
1_scripts/8_formatting_files/: convert_landsat_to_model_format.py  convert_planet_to_model_format.py  convert_sentinel_to_model_format.py
2_notebooks/2_prototypes/: official_planet_prototype_v1_final_version_topobathy.ipynb  prototype.ipynb
4_tiffs/: ID_mqq51_sample_int3.tif  coregister_2023-02-14-10-33-43_L8_ID_mqq51_new_block.tif
sample_data/: rois.geojson  shoreline.geojson  transects.geojson
sample_data/sample_tiffs/: classification_results.csv
sample_data/sample_tiffs/good/: 20230610_145046_77_2459_3B_AnalyticMS_metadata_clip.xml  20230610_145046_77_2459_3B_TOAR_model_format.tif.aux.xml  20230610_145046_77_2459_3B_udm2_clip.tif  20230616_153032_93_2479_3B_AnalyticMS_metadata_clip.xml  20230618_152713_72_248e_3B_AnalyticMS_toar_clip.tif.aux.xml  20230618_152713_72_248e_3B_udm2_clip.tif  raw_extracted_shorelines.geojson  raw_transect_time_series.csv  raw_transect_time_series_merged.csv  raw_transect_time_series_points.geojson  raw_transect_time_series_vectors.geojson  shorelines_dict.json  transects_cross_distances.json
sample_data/sample_tiffs_duck_nc/: 20230616_153032_93_2479_3B_udm2_clip.tif  20230616_153032_93_2479_metadata.json  20230618_152713_72_248e_3B_AnalyticMS_metadata_clip.xml
src/coastseg_planet/: __init__.py  config.py  coregister.py  db.py  db_utils.py  download.py  download_manager.py  masking.py  model.py  order_manager.py  orders.py  plotting.py  processing.py  processor.py  shoreline_extraction.py  transects.py  utils.py  visualize.py
src/coastseg_planet/db/: base.py  order_repository.py  original_db.py  roi_db.py  roi_repository.py  tile_db.py  tile_repository.py
src/coastseg_planet/models/classifier/: model_details.txt
src/coastseg_planet/models/segformer_RGB_4class_8190958/: BEST_MODEL.txt  sat4class_rgb_512_v5_modelcard.json  sat4class_rgb_512_v5_segformer.json
tests/: test_download.py  test_orders.py
